--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -226,6 +226,7 @@ status.rm-digital-photograph-record=Documento de archivo fotogr\u00e1fico digita
 status.rm-pdf-record=Archivo PDF
 status.rm-scanned-record=Documento de archivo escaneado
 status.rm-web-record=Documento de archivo web
+status.rm-is-record=Documento de archivo
 # Exif
 status.exif=Metadatos EXIF disponibles
 
@@ -375,6 +376,7 @@ tip.insitu-tag=Etiqueta
 show.folders=Mostrar {0} subcarpeta(s)
 
 details.undeclared-record.info=Documento de archivo incompleto
+details.rejected-record.info=Documento de archivo rechazado
 details.record.identifier=Identificador \u00fanico de documento de archivo
 details.record.originator=Creador
 details.record.originating-organization=Organizaci\u00f3n creadora
@@ -412,3 +414,7 @@ message.max.text.length.validation=El texto no puede tener una longitud superior
 
 ## Validation messages
 Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Seleccione un peri\u00f3do de revisi\u00f3n
+
+## Forms
+form.control.object-picker.items-list.empty=No hay elementos
+form.control.object-picker.items-list.loading=Cargando...
