--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -226,6 +226,7 @@ status.rm-digital-photograph-record=Enregistrement de photographie num\u00e9riqu
 status.rm-pdf-record=Enregistrement Pdf
 status.rm-scanned-record=Enregistrement num\u00e9ris\u00e9
 status.rm-web-record=Enregistrement Web
+status.rm-is-record=Enregistrement
 # Exif
 status.exif=M\u00e9tadonn\u00e9es EXIF disponibles
 
@@ -375,6 +376,7 @@ tip.insitu-tag=Balise
 show.folders=Afficher {0} sous-dossier(s)
 
 details.undeclared-record.info=Enregistrement incomplet
+details.rejected-record.info=Enregistrement rejet\u00e9
 details.record.identifier=Identificateur d'enregistrement unique
 details.record.originator=\u00c9metteur
 details.record.originating-organization=Organisation \u00e9mettrice
@@ -412,3 +414,7 @@ message.max.text.length.validation=Le texte ne doit pas d\u00e9passer {max} cara
 
 ## Validation messages
 Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Veuillez s\u00e9lectionner une p\u00e9riode de v\u00e9rification
+
+## Forms
+form.control.object-picker.items-list.empty=Aucun \u00e9l\u00e9ment
+form.control.object-picker.items-list.loading=Chargement...
