--- a/rm-share/config/alfresco/messages/rm_it.properties
+++ b/rm-share/config/alfresco/messages/rm_it.properties
@@ -226,6 +226,7 @@ status.rm-digital-photograph-record=Record fotografia digitale
 status.rm-pdf-record=Record PDF
 status.rm-scanned-record=Record scansionato
 status.rm-web-record=Record Web
+status.rm-is-record=Record
 # Exif
 status.exif=Metadati EXIF disponibili
 
@@ -375,6 +376,7 @@ tip.insitu-tag=Tag
 show.folders=Mostra {0} sottocartelle
 
 details.undeclared-record.info=Record incompleto
+details.rejected-record.info=Record respinti
 details.record.identifier=Identificatore record unico
 details.record.originator=Iniziatore
 details.record.originating-organization=Organizzazione di origine
@@ -412,3 +414,7 @@ message.max.text.length.validation=La lunghezza del testo non pu\u00f2 superare 
 
 ## Validation messages
 Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Selezionare un periodo di revisione
+
+## Forms
+form.control.object-picker.items-list.empty=Nessun elemento
+form.control.object-picker.items-list.loading=Caricamento in corso...
