RM: I18N updates (DE & JA)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@56407 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -226,6 +226,7 @@ status.rm-digital-photograph-record=Digitaler Fotodatensatz
 status.rm-pdf-record=PDF-Datensatz
 status.rm-scanned-record=Eingescannter Datensatz
 status.rm-web-record=Webdatensatz
+status.rm-is-record=Datensatz
 # Exif
 status.exif=EXIF-Metadaten verf\u00fcgbar
 
@@ -375,6 +376,7 @@ tip.insitu-tag=Tag
 show.folders={0} Unterordner anzeigen
 
 details.undeclared-record.info=Nicht abgeschlossener Datensatz
+details.rejected-record.info=Abgelehnter Datensatz
 details.record.identifier=Eindeutige Datensatz-ID
 details.record.originator=Urheber
 details.record.originating-organization=Erstellende Organisation
@@ -412,3 +414,7 @@ message.max.text.length.validation=Der Text darf nicht l\u00e4nger als {max} Zei
 
 ## Validation messages
 Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Bitte w\u00e4hlen Sie einen \u00dcberpr\u00fcfungszeitraum
+
+## Forms
+form.control.object-picker.items-list.empty=Keine Elemente
+form.control.object-picker.items-list.loading=Laden...
