--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -226,6 +226,7 @@ status.rm-digital-photograph-record=\u30c7\u30b8\u30bf\u30eb\u5199\u771f\u30ec\u
 status.rm-pdf-record=PDF\u30ec\u30b3\u30fc\u30c9
 status.rm-scanned-record=\u30b9\u30ad\u30e3\u30f3\u6e08\u307f\u30ec\u30b3\u30fc\u30c9
 status.rm-web-record=Web\u30ec\u30b3\u30fc\u30c9
+status.rm-is-record=\u30ec\u30b3\u30fc\u30c9
 # Exif
 status.exif=EXIF\u30e1\u30bf\u30c7\u30fc\u30bf\u304c\u5229\u7528\u53ef\u80fd\u3067\u3059
 
@@ -375,6 +376,7 @@ tip.insitu-tag=\u30bf\u30b0
 show.folders={0}\u500b\u306e\u30b5\u30d6\u30d5\u30a9\u30eb\u30c0\u3092\u8868\u793a\u3059\u308b
 
 details.undeclared-record.info=\u672a\u5b8c\u4e86\u30ec\u30b3\u30fc\u30c9
+details.rejected-record.info=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9
 details.record.identifier=\u4e00\u610f\u306a\u30ec\u30b3\u30fc\u30c9ID
 details.record.originator=\u767a\u4fe1\u5143
 details.record.originating-organization=\u767a\u4fe1\u5143\u7d44\u7e54
@@ -412,3 +414,7 @@ message.max.text.length.validation=\u30c6\u30ad\u30b9\u30c8\u306f{max}\u6587\u5b
 
 ## Validation messages
 Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=\u30ec\u30d3\u30e5\u30fc\u671f\u9593\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
+
+## Forms
+form.control.object-picker.items-list.empty=\u30a2\u30a4\u30c6\u30e0\u304c\u3042\u308a\u307e\u305b\u3093
+form.control.object-picker.items-list.loading=\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059...
