RM-1066: Set Property action node value substitution breaks declare record when no value set. RM-1065	 Unable to hide completed records. RM-1067	 Key French RM term is incorrect
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@56489 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_fr.properties
@@ -6,7 +6,7 @@ label.to=\u00c0
 label.yes=Oui
 label.no=Non
 label.button-cancel=Annuler
-button.view-record=Afficher l'enregistrement
+button.view-record=Afficher le document d'archives
 
 label.clear-log-title=Effacer le journal d'audit ?
 label.clear-log-confirmation=Voulez-vous vraiment effacer le journal d'audit ?
@@ -34,11 +34,11 @@ label.button-start=D\u00e9marrer
 label.button-view-log=Afficher le journal complet
 label.button-specify=D\u00e9finir
 label.button-export=Exporter
-label.button-file-record=Fichier comme enregistrement
+label.button-file-record=Fichier comme document d'archives
 
-label.filed-log-message=Le journal d'audit a \u00e9t\u00e9 archiv\u00e9 comme enregistrement.
+label.filed-log-message=Le journal d'audit a \u00e9t\u00e9 archiv\u00e9 comme document d'archives.
 message.file-log-fail=\u00c9chec de l'archivage du journal d'audit.
-label.file-record=Archiver l'enregistrement
+label.file-record=Archiver l'document d'archives
 
 
 label.timestamp=Horodatage
@@ -54,4 +54,4 @@ label.identifier=Identificateur
 label.no-previous=<n\u00e9ant>
 
 node.root=Plan de fichier
-title.single=S\u00e9lectionner l'emplacement de l'enregistrement d'audit
+title.single=S\u00e9lectionner l'emplacement du document d'archives d'audit
