--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_fr.properties
@@ -2,9 +2,9 @@
 
 label.yes=Oui
 label.no=Non
-label.record=Enregistrement
+label.record=Document d'archives
 label.button-cancel=Annuler
-button.view-record=Afficher l'enregistrement
+button.view-record=Afficher le document d'archives
 
 label.clear-log-title=Effacer le journal d'audit ?
 label.clear-log-confirmation=Voulez-vous vraiment effacer le journal d'audit ?
@@ -34,13 +34,13 @@ label.button-start=D\u00e9marrer
 label.button-view-log=Afficher le journal complet
 label.button-specify=D\u00e9finir
 label.button-export=Exporter
-label.button-file-record=Archiver comme enregistrement
+label.button-file-record=Archiver comme document d'archives
 label.button-apply=Appliquer
 label.button-details=D\u00e9tails
 
-label.filed-log-message=Le journal d'audit a \u00e9t\u00e9 archiv\u00e9 comme enregistrement.
+label.filed-log-message=Le journal d'audit a \u00e9t\u00e9 archiv\u00e9 comme document d'archives.
 message.filing-log-fail=\u00c9chec de l'archivage du journal d'audit.
-label.file-record=Archiver l'enregistrement
+label.file-record=Archiver le document d'archives
 
 label.timestamp=Horodatage
 label.user=Utilisateur
@@ -56,7 +56,7 @@ label.remove-filter=Supprimer le filtre
 label.default-message=Cliquez sur 'Appliquer' pour afficher le journal d'audit
 
 node.root=Plan de fichier
-title.single=S\u00e9lectionner l'emplacement de l'enregistrement d'audit
+title.single=S\u00e9lectionner l'emplacement du document d'archives d'audit
 
 label.header-users=Utilisateurs
 label.header-entries=Nombre d'entr\u00e9es
