--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_fr.properties
@@ -14,7 +14,7 @@ button.fullscreen.enter=Plein \u00e9cran
 button.fullscreen.exit=Quitter le plein \u00e9cran
 button.setDefaultView=D\u00e9finir ''{0}'' comme valeur par d\u00e9faut du dossier
 button.removeDefaultView=Supprimer ''{0}'' comme valeur par d\u00e9faut du dossier
-button.freeze.record=Geler le ou les enregistrements
+button.freeze.record=Geler le ou les documents d'archives
 button.electronic=\u00c9lectronique
 button.non-electronic=Non \u00e9lectronique
 button.report=Rapport
@@ -22,12 +22,12 @@ button.manage-rules=G\u00e9rer les r\u00e8gles
 button.options=Options...
 
 ## Dialog labels
-label.new-rma_recordCategory.title=Nouvelle cat\u00e9gorie d'enregistrement
-label.new-rma_recordCategory.header=D\u00e9tails de cat\u00e9gorie d'enregistrement
-label.new-rma_recordFolder.title=Nouveau dossier d'enregistrements
-label.new-rma_recordFolder.header=D\u00e9tails du dossier d'enregistrements
-label.new-rma_nonElectronicDocument.title=Enregistrement non \u00e9lectronique
-label.new-rma_nonElectronicDocument.header=D\u00e9tails de l'enregistrement
+label.new-rma_recordCategory.title=Nouvelle cat\u00e9gorie de document d'archives
+label.new-rma_recordCategory.header=D\u00e9tails de cat\u00e9gorie de document d'archives
+label.new-rma_recordFolder.title=Nouveau dossier d'archives
+label.new-rma_recordFolder.header=D\u00e9tails du dossier d'archives
+label.new-rma_nonElectronicDocument.title=Document d'archives non \u00e9lectronique
+label.new-rma_nonElectronicDocument.header=D\u00e9tails du document d'archives
 
 ## Drop-down Menus
 menu.selected-items=\u00c9l\u00e9ments s\u00e9lectionn\u00e9s...
@@ -51,7 +51,7 @@ menu.selected-items.undo-cutoff=Annuler la limite
 menu.selected-items.unfreeze=D\u00e9geler
 
 ## Pop-up Messages
-message.file.type=Archivez-vous un enregistrement \u00e9lectronique ou non \u00e9lectronique ?
+message.file.type=Archivez-vous un document d'archives \u00e9lectronique ou non \u00e9lectronique ?
 message.file.type.title=Type d'archivage
 message.multiple-delete.failure=Impossible de supprimer les \u00e9l\u00e9ments
 message.multiple-delete.success=Suppression de {0} \u00e9l\u00e9ment(s) r\u00e9ussie
@@ -62,7 +62,7 @@ message.new-folder.failure=Impossible de cr\u00e9er le dossier
 message.new-category.failure=Impossible de cr\u00e9er la cat\u00e9gorie
 message.new-folder.success=Le dossier ''{0}'' a \u00e9t\u00e9 cr\u00e9\u00e9
 message.new-record.failure=Impossible de cr\u00e9er ''{0}''
-message.new-record.success=L''enregistrement ''{0}'' a \u00e9t\u00e9 cr\u00e9\u00e9
+message.new-record.success=Le document d''archives ''{0}'' a \u00e9t\u00e9 cr\u00e9\u00e9
 message.load-top-level-assets.failure=Impossible d'exporter tout, car les actifs de niveau sup\u00e9rieur n'ont pas pu \u00eatre charg\u00e9s
 message.nothing-to-export=Rien \u00e0 exporter
 
@@ -72,13 +72,13 @@ description.path.more=
 description.savedsearch=R\u00e9sultat de recherche enregistr\u00e9e
 description.savedsearch.more=''{0}''
 description.transfers=Transferts
-description.transfers.more=(Enregistrements en attente de transfert ou de fin d'acc\u00e8s)
+description.transfers.more=(Documents d'archives en attente de transfert ou de fin d'acc\u00e8s)
 description.transfers.more.filterDisplay=visualisation de ''{0}'' actuellement
 description.holds=Suspensions actives
-description.holds.more=(Enregistrements et dossiers d'enregistrements gel\u00e9s)
+description.holds.more=(Documents d'archives et dossiers d'archives gel\u00e9s)
 description.holds.more.filterDisplay=visualisation de ''{0}'' actuellement
-description.unfiledRecords=Enregistrements unifi\u00e9s
-description.unfiledRecords.more=(Enregistrements non archiv\u00e9s)
+description.unfiledRecords=Documents d'archives unifi\u00e9s
+description.unfiledRecords.more=(Documents d'archives non archiv\u00e9s)
 description.unfiledRecords.more.filterDisplay=visualisation de ''{0}'' actuellement
 
 ## Browser dialogs
