--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_fr.properties
@@ -4,4 +4,4 @@ header.fileplan=Plan de fichier
 ## Filters
 label.transfers=Transferts
 label.holds=Suspensions
-label.unfiledRecords=Enregistrements unifi\u00e9s
+label.unfiledRecords=Documents d'archives unifi\u00e9s
