--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_fr.properties
@@ -6,7 +6,7 @@ title.actions=\u00c9tapes de disposition
 label.dispositionAuthority=Droit de disposition
 label.dispositionInstructions=Instructions de disposition
 label.appliedTo=Appliqu\u00e9 \u00e0
-label.appliedTo.record=Enregistrement
+label.appliedTo.record=Document d'archives
 label.appliedTo.folder=Dossier
 label.noactions=La planification de disposition n'a pas d'actions
 label.title.simple={0}
