--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/events.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/events.get_fr.properties
@@ -14,7 +14,7 @@ label.asOf=Date de d\u00e9but
 label.noDispositionSchedule=Le cycle de vie de disposition n'existe pas.
 label.noEventsInDispositionSchedule=Aucun \u00e9v\u00e9nement pour l''\u00e9tape ''{0}''.
 label.completeDispositionSchedule=Cycle de vide de disposition termin\u00e9.
-label.dispositionScheduleAppliedToFolder=Planification de disposition appliqu\u00e9e au dossier d'enregistrements parent avec la date de d\u00e9but : {0}.
+label.dispositionScheduleAppliedToFolder=Planification de disposition appliqu\u00e9e au dossier d'archives parent avec la date de d\u00e9but : {0}.
 label.linkToFoldersDispositionSchedule=Afficher les \u00e9v\u00e9nements de dossier parent
 label.loadFailure=Impossible de charger les \u00e9v\u00e9nements
 button.completeEvent=Compl\u00e9ter un \u00e9v\u00e9nement
