--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get_fr.properties
@@ -6,5 +6,5 @@ label.new-reference=Nouvelle r\u00e9f\u00e9rence
 label.no-references=Aucune r\u00e9f\u00e9rence
 message.delete.fail=Impossible de supprimer la r\u00e9f\u00e9rence
 message.delete.success=R\u00e9f\u00e9rence supprim\u00e9e
-label.references-from=R\u00e9f\u00e9rences depuis les autres enregistrements
-label.references-to=R\u00e9f\u00e9rences aux autres enregistrerments
+label.references-from=R\u00e9f\u00e9rences depuis les autres documents d'archives
+label.references-to=R\u00e9f\u00e9rences aux autres documents d'archives
