--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_fr.properties
@@ -1,6 +1,6 @@
 label.title-new-reference = Nouvelle r\u00e9f\u00e9rence
 label.select = S\u00e9lectionner
-label.record-link = Lier \u00e0 l'enregistrement
+label.record-link = Lier au document d'archives
 label.record-rel = Relation
 label.name = Nom de la r\u00e9f\u00e9rence
 label.required = Champ obligatoire
