--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
@@ -4,7 +4,7 @@ button.reject=Rejeter...
 button.requestInfo=Demander des informations...
 button.select-folder=S\u00e9lectionner...
 button.message=Message...
-button.addRecordTypes=Types d'enregistrement...
+button.addRecordTypes=Types de document d'archives...
 menu.item.select=S\u00e9lectionner...
 
 label.setProperty.property=D\u00e9finir la propri\u00e9t\u00e9\u00a0:
@@ -22,7 +22,7 @@ form.control.date-picker.display.date.format=DD/MM/YYYY
 form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 Hour)
 
-record.folder.path.title=Cliquez pour afficher le texte d'aide pour le champ du chemin du dossier d'enregistrement.
+record.folder.path.title=Cliquez pour afficher le texte d'aide pour le champ du chemin du dossier d'archives.
 record.folder.path.help=<p>Les substitutions suivantes sont autoris\u00e9es\u00a0:</p>\
    <p></p>\
    <p>date.day.short = Sun</p>\
