--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_fr.properties
@@ -36,8 +36,8 @@ inmemory.uploadsize.exceeded=Votre navigateur ne prend pas en charge les ajouts 
 
 
 # RM Specific properties
-header.multiUpload=Enregistrements de fichier
-button.selectFiles=S\u00e9lectionner les enregistrements \u00e0 archiver
+header.multiUpload=Document d'archives de fichier
+button.selectFiles=S\u00e9lectionner les documents d'archives \u00e0 archiver
 
 header.import=Importer
 button.selectImportFile=S\u00e9lectionner le fichier d'importation
