--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_fr.properties
@@ -3,7 +3,7 @@ header.multiUpload=Envoyer un ou des fichiers
 header.singleUpdate=Mettre \u00e0 jour un fichier
 header.singleImport=Importer
 
-section.recordType=Choisir le type d'enregistrement
+section.recordType=Choisir le type de document d'archives
 section.file=Choisir le ou les fichiers
 
 label.browse=S\u00e9lectionner le ou les fichiers \u00e0 envoyer
@@ -30,6 +30,6 @@ label.comments=Commentaires
 label.contentType=Type de contenu
 type.cm_content=Contenu
 
-label.recordType=Type(s) d'enregistrement(s)
+label.recordType=Type(s) de(s) document(s) d'archives
 label.recordType.description=Remarque : Tous les fichiers list\u00e9s seront marqu\u00e9s comme type(s) choisi(s).
 recordType.default=Valeur par d\u00e9faut
