--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_fr.properties
@@ -25,5 +25,5 @@ message.failure=Le document n'a pas pu \u00eatre t\u00e9l\u00e9charg\u00e9
 label.contentType=Type de contenu
 type.cm_content=Contenu
 
-label.recordType=Type(s) d'enregistrement(s)
+label.recordType=Type(s) de(s) document(s) d'archives
 recordType.default=Valeur par d\u00e9faut
