--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-transfer-report.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-transfer-report.get_fr.properties
@@ -1,7 +1,7 @@
-header=S\u00e9lectionner le dossier d'enregistrements de destination
+header=S\u00e9lectionner le dossier d'archives de destination
 
 node.root=Plan de fichier
-title.single=Archiver le rapport {0} de transfert de fiichier dans...
+title.single=Archiver le rapport {0} de transfert de fichier dans...
 button.file=Archiver le rapport
 message.no-files=Vous devez fournir au moins un fichier.
 message.please-wait=Rapport de transfert en cours d'archivage..
