--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/document-details/document-references.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/document-details/document-references.get_fr.properties
@@ -3,5 +3,5 @@ label.manage-references=G\u00e9rer
 message.no-messages=Il n'existe aucune r\u00e9f\u00e9rence
 label.birelationship={0} de {1}
 label.parentrelationshp={0}
-label.references-from-this=Aux autres enregistrements
-label.references-to-this=Des autres enregistrements
+label.references-from-this=Aux autres documents d'archives
+label.references-to-this=Des autres documents d'archives
