--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_fr.properties
@@ -1,20 +1,20 @@
 ﻿## Title
 header.savedsearch=Recherches enregistr\u00e9es
 
-rm.savedsearch.vitalRecordsName=Enregistrements essentiels pour v\u00e9rification
-rm.savedsearch.vitalRecordsDesc=Tous les enregistrements n\u00e9cessitant actuellement une v\u00e9rification.
+rm.savedsearch.vitalRecordsName=Documents d'archives essentiels pour v\u00e9rification
+rm.savedsearch.vitalRecordsDesc=Tous les documents d'archives n\u00e9cessitant actuellement une v\u00e9rification.
 
-rm.savedsearch.incompleteRecordsName=Enregistrements incomplets
-rm.savedsearch.incompleteRecordsDesc=Tous les enregistrements incomplets.
+rm.savedsearch.incompleteRecordsName=Documents d'archives incomplets
+rm.savedsearch.incompleteRecordsDesc=Tous les documents d'archives incomplets.
 
-rm.savedsearch.cutoffRecordsName=Enregistrements \u00e9ligibles pour limitation
-rm.savedsearch.cutoffRecordsDesc=Tous les enregistrements actuellement \u00e9ligibles pour limitation.
+rm.savedsearch.cutoffRecordsName=Documents d'archives \u00e9ligibles pour limitation
+rm.savedsearch.cutoffRecordsDesc=Tous les documents d'archives actuellement \u00e9ligibles pour limitation.
 
-rm.savedsearch.transferRecordsName=Enregistrements \u00e9ligibles pour transfert
-rm.savedsearch.transferRecordsDesc=Tous les enregistrements actuellement \u00e9ligibles pour transfert.
+rm.savedsearch.transferRecordsName=Documents d'archives \u00e9ligibles pour transfert
+rm.savedsearch.transferRecordsDesc=Tous les documents d'archives actuellement \u00e9ligibles pour transfert.
 
-rm.savedsearch.destructionRecordsName=Enregsitrements \u00e9ligibles pour destruction
-rm.savedsearch.destructionRecordsDesc=Tous les enregistrements actuellement \u00e9ligibles pour destruction.
+rm.savedsearch.destructionRecordsName=Documents d'archives \u00e9ligibles pour destruction
+rm.savedsearch.destructionRecordsDesc=Tous les documents d'archives actuellement \u00e9ligibles pour destruction.
 
-rm.savedsearch.frozenRecordsName=Enregistrements gel\u00e9s
-rm.savedsearch.frozenRecordsDesc=Tous les enregistrements gel\u00e9s.
+rm.savedsearch.frozenRecordsName=Documents d'archives gel\u00e9s
+rm.savedsearch.frozenRecordsDesc=Tous les documents d'archives gel\u00e9s.
