--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_fr.properties
@@ -1,10 +1,10 @@
 label.user=Utilisateur
 label.dateAndTime=Date et heure
 label.parentPath=Chemin
-label.recordSeriesIdentifier=Identificateur de s\u00e9rie d'enregistrements
-label.recordCategoryIdentifier=Identificateur de cat\u00e9gorie d'enregistrement
-label.recordFolderIdentifier=Identificateur de dossier d'enregistrements
-label.vitalRecordIndicator=Identificateur d'enregistrement essentiel
+label.recordSeriesIdentifier=Identificateur de s\u00e9rie des documents d'archives
+label.recordCategoryIdentifier=Identificateur de cat\u00e9gorie de document d'archives
+label.recordFolderIdentifier=Identificateur de dossier d'archives
+label.vitalRecordIndicator=Identificateur de document d'archives essentiel
 label.dispositionAuthority=Droit de disposition
 label.noDispositionAuthority=N\u00e9ant
 label.dispositionSchedule=Planification de disposition
