--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_fr.properties
@@ -20,11 +20,11 @@ label.insertfield=Ins\u00e9rer un champ
 label.select=S\u00e9lectionner...
 label.insertdate=Ins\u00e9rer une date
 
-label.records=Afficher les enregistrements (termin\u00e9s seulement)
+label.records=Afficher les documents d'archives (termin\u00e9s seulement)
 label.undeclared=Inclure incomplet
 label.vital=Afficher les essentiels seulement
-label.recordFolders=Afficher les dossiers d'enregistrements
-label.recordCategories=Afficher les cat\u00e9gories d'enregistrements
+label.recordFolders=Afficher les dossiers d'archives
+label.recordCategories=Afficher les cat\u00e9gories des documents d'archives
 label.frozen=Afficher les gel\u00e9s uniquement (exclus lorsque non s\u00e9lectionn\u00e9s)
 label.cutoff=Afficher les limit\u00e9s uniquement
 
@@ -47,7 +47,7 @@ label.sortAscending=Croissant
 label.sortDescending=D\u00e9croissant
 label.dueForReview=Arriv\u00e9e \u00e0 \u00e9ch\u00e9ance pour v\u00e9rification
 label.components=Composants
-label.recordSeries=S\u00e9rie d'enregistrement
+label.recordSeries=S\u00e9rie de document d'archives
 label.parentFolder=Dossier parent
 
 
@@ -56,7 +56,7 @@ label.dispositionEvents=\u00c9v\u00e9nements de disposition
 label.dispositionActionName=Nom d'action de disposition
 label.dispositionActionAsOf=Date de d\u00e9but de l'action de disposition
 label.dispositionEventsEligible=\u00c9v\u00e9nements de disposition \u00e9ligibles
-label.vitalRecordReviewPeriod=P\u00e9riode de v\u00e9rification d'enregistrement essentiel
+label.vitalRecordReviewPeriod=P\u00e9riode de v\u00e9rification de document d'archives essentiel
 label.hasDispositionSchedule=A une planification de disposition
 label.dispositionPeriod=P\u00e9riode de disposition
 label.dispositionInstructions=Instructions de disposition
