--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/add-record-metadata.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/add-record-metadata.get_fr.properties
@@ -1,2 +1,2 @@
-header=Ajouter des m\u00e9tadonn\u00e9es d'enregistrement
-label.record-type=Type d'enregistrement
+header=Ajouter des m\u00e9tadonn\u00e9es de document d'archives
+label.record-type=Type de document d'archives
