--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/utils/create-site.post_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/utils/create-site.post_fr.properties
@@ -1,2 +1,2 @@
-title.rmsite=Gestion des enregistrements
-description.rmsite=Site de gestion des enregistrements
+title.rmsite=Archivage \u00e9lectronique
+description.rmsite=Site de gestion d'archivage \u00e9lectronique
