RM-1114: 'Loading the Document Library' message is displayed on a New Rule page in RM Site - Added appropriate message.loading properties to all languages for rule-details.get and rule-edit.get where this message is used
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.1@59343 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_es.properties
@@ -11,3 +11,4 @@ message.getRuleFailure=No se pudo cargar la informaci\u00f3n de la regla
 message.deletingRule=Eliminando regla...   
 message.confirm.delete.title=Eliminar regla
 message.confirm.delete=\u00bfEst\u00e1 seguro de que desea eliminar la regla?
+message.loading=Cargando el plan de ficheros...
