--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_es.properties
@@ -21,3 +21,4 @@ message.creating=Creando regla...
 message.updating=Actualizando regla...
 message.persist-failure=No se pudo mantener la regla
 message.createAnotherRule=Regla creada correctamente 
+message.loading=Cargando el plan de ficheros...
