--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_fr.properties
@@ -20,4 +20,5 @@ header.action=Ex\u00e9cuter l'action
 message.creating=Cr\u00e9ation de la r\u00e8gle...
 message.updating=Mise \u00e0 jour de la r\u00e8gle...
 message.persist-failure=Impossible de rendre la r\u00e8gle persistante
-message.createAnotherRule=La r\u00e8gle a \u00e9t\u00e9 cr\u00e9\u00e9e avec succ\u00e8s 
+message.createAnotherRule=La r\u00e8gle a \u00e9t\u00e9 cr\u00e9\u00e9e avec succ\u00e8s
+message.loading=Chargement du plan de fichier... 
