--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_it.properties
@@ -21,3 +21,4 @@ message.creating=Creazione della regola in corso...
 message.updating=Aggiornamento della regola in corso...
 message.persist-failure=Impossibile rendere permanente la regola
 message.createAnotherRule=Regola creata 
+message.loading=Caricamento del piano file...
