--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_de.properties
@@ -11,3 +11,4 @@ message.getRuleFailure=Regelinformationen konnten nicht geladen werden.
 message.deletingRule=Regel wird gel\u00f6scht...   
 message.confirm.delete.title=Regel l\u00f6schen
 message.confirm.delete=M\u00f6chten Sie diese Regel wirklich l\u00f6schen?
+message.loading=Ablageplan wird geladen...
