--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_it.properties
@@ -11,3 +11,4 @@ message.getRuleFailure=Impossibile caricare le informazioni sulle regole
 message.deletingRule=Eliminazione della regola in corso...   
 message.confirm.delete.title=Elimina regola
 message.confirm.delete=Eliminare la regola?
+message.loading=Caricamento del piano file...
