--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_ja.properties
@@ -11,3 +11,4 @@ message.getRuleFailure=\u30eb\u30fc\u30eb\u60c5\u5831\u3092\u8aad\u307f\u8fbc\u3
 message.deletingRule=\u30eb\u30fc\u30eb\u3092\u524a\u9664\u3057\u3066\u3044\u307e\u3059...   
 message.confirm.delete.title=\u30eb\u30fc\u30eb\u306e\u524a\u9664
 message.confirm.delete=\u30eb\u30fc\u30eb\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
+message.loading=\u30d5\u30a1\u30a4\u30eb\u30d7\u30e9\u30f3\u3092\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059...
