--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_ja.properties
@@ -20,4 +20,5 @@ header.action=\u30a2\u30af\u30b7\u30e7\u30f3\u306e\u5b9f\u884c
 message.creating=\u30eb\u30fc\u30eb\u3092\u4f5c\u6210\u3057\u3066\u3044\u307e\u3059...
 message.updating=\u30eb\u30fc\u30eb\u3092\u66f4\u65b0\u3057\u3066\u3044\u307e\u3059...
 message.persist-failure=\u30eb\u30fc\u30eb\u3092\u5b58\u7d9a\u3055\u305b\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
-message.createAnotherRule=\u30eb\u30fc\u30eb\u306f\u6b63\u5e38\u306b\u4f5c\u6210\u3055\u308c\u307e\u3057\u305f 
+message.createAnotherRule=\u30eb\u30fc\u30eb\u306f\u6b63\u5e38\u306b\u4f5c\u6210\u3055\u308c\u307e\u3057\u305f
+message.loading=\u30d5\u30a1\u30a4\u30eb\u30d7\u30e9\u30f3\u3092\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059... 
