RM-1164: RM 2.1.1 core language bundle refresh RM-1166: RM 2.1.1 Translation into Dutch
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.1@61227 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
@@ -38,3 +38,4 @@ record.folder.path.help=<p>Les substitutions suivantes sont autoris\u00e9es\u00a
    <p>date.year = 13</p>\
    <p>date.year.long = 2013</p>\
    <p>date.year.week = 31 (01-52)</p>\
+   <p>node.cm:title = <title value of the node></p>\
