--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
@@ -38,3 +38,4 @@ record.folder.path.help=<p>Sono consentite le seguenti sostituzioni:</p>\
    <p>data.anno = 13</p>\
    <p>data.anno.lungo = 2013</p>\
    <p>data.anno.settimana = 31 (01-52)</p>\
+   <p>node.cm:title = <title value of the node></p>\
