--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_de.properties
@@ -38,3 +38,4 @@ record.folder.path.help=<p>Die folgenden Ersetzungen sind zul\u00e4ssig:</p>\
    <p>date.year = 13</p>\
    <p>date.year.long = 2013</p>\
    <p>date.year.week = 31 (01-52)</p>\
+   <p>node.cm:title = <title value of the node></p>\
