--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_ja.properties
@@ -38,3 +38,4 @@ record.folder.path.help=<p>\u6b21\u306e\u7f6e\u63db\u304c\u53ef\u80fd\u3067\u305
    <p>date.year = 13</p>\
    <p>date.year.long = 2013</p>\
    <p>date.year.week = 31 (01-52)</p>\
+   <p>node.cm:title = <title value of the node></p>\
