RM-1245: RM 2.1 Simplified Chinese UI Review
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.1@62764 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_zh_CN.properties
@@ -72,9 +72,9 @@ description.path.more=
 description.savedsearch=\u5df2\u4fdd\u5b58\u641c\u7d22\u7684\u7ed3\u679c
 description.savedsearch.more=''{0}''
 description.transfers=\u8f6c\u79fb
-description.transfers.more=\uff08\u7b49\u5f85\u201c\u8f6c\u79fb\u201d\u6216\u201c\u52a0\u5165\u5b8c\u6210\u201d\u7684\u8bb0\u5f55\uff09
+description.transfers.more=\uff08\u7b49\u5f85\u201c\u8f6c\u79fb\u5b8c\u6210\u201d\u6216\u201c\u52a0\u5165\u5b8c\u6210\u201d\u7684\u8bb0\u5f55\uff09
 description.transfers.more.filterDisplay=\u5f53\u524d\u6b63\u5728\u67e5\u770b ''{0}''
-description.holds=\u6d3b\u52a8\u7684\u4fdd\u6301
+description.holds=\u5f53\u524d\u7684\u4fdd\u6301
 description.holds.more=\uff08\u5904\u4e8e\u201c\u51bb\u7ed3\u201d\u72b6\u6001\u7684\u8bb0\u5f55\u548c\u8bb0\u5f55\u6587\u4ef6\u5939\uff09
 description.holds.more.filterDisplay=\u5f53\u524d\u6b63\u5728\u67e5\u770b ''{0}''
 description.unfiledRecords=\u672a\u5f52\u6863\u7684\u8bb0\u5f55
