--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_zh_CN.properties
@@ -7,7 +7,7 @@ header.completion=\u4e8b\u4ef6\u5b8c\u6210
 label.required.fields=\u5fc5\u586b\u5b57\u6bb5
 label.title.simple={0}
 label.title.noTime={0} {1}
-label.title.complex={1} {2} \u79d2\u540e {0}
+label.title.complex={1} {2} \u540e {0}
 label.title.new=\u65b0\u6b65\u9aa4
 label.transferTo=\u8f6c\u79fb\u5230
 label.after=\u5728\u8be5\u65f6\u95f4\u540e
