--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_zh_CN.properties
@@ -11,7 +11,7 @@ label.appliedTo.folder=\u6587\u4ef6\u5939
 label.noactions=\u5904\u7f6e\u8ba1\u5212\u6ca1\u6709\u64cd\u4f5c
 label.title.simple={0}
 label.title.noTime={0} {1}
-label.title.complex={1} {2} \u79d2\u540e {0}
+label.title.complex={1} {2} \u540e {0}
 label.nodescription=&lt;\u65e0&gt;
 
 link.description=\u67e5\u770b\u8bf4\u660e
