Deleted hard coded text. Refactored code according Code Standart. Added PO tests for Edit/Create Disposition page and for CreateRulesPage, LinkToRulesPage.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@66129 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-ui-tests/src/test/resources/rm_en.properties
+++ b/rm-ui-tests/src/test/resources/rm_en.properties
@@ -3,3 +3,69 @@ rm.file.plan.link = File Plan
 rm.records.search.link = Records Search
 rm.site.members.link = Site Members
 rm.records.management.console.link = Records Management Console
+############################################################################################################
+#Records Details Page                                                                                      #
+############################################################################################################
+record.edit.metadata.link = Edit Metadata
+record.complete.record.link = Complete Record
+record.link.to.link = Link to
+record.move.to.link = Move to
+record.copy.to.link = Copy to
+record.delete.link = Delete
+#Add to hold
+record.add.to.hold.link = Freeze
+record.unfreeze.link = Unfreeze
+record.request.information.link = Request Information
+record.add.record.metadata.link = Add Record Metadata
+record.view.audit.log.link = View Audit Log
+############################################################################################################
+#Audit Window labels                                                                                       #
+############################################################################################################
+audit.updated.metadata.label = Updated Metadata
+audit.created.object.label = Created Object
+audit.view.audit.label =  Audit View
+audit.event.label = Event
+############################################################################################################
+#Buttons                                                                                                   #
+############################################################################################################
+freeze.record.button = Freeze Record
+delete.button = Delete
+select.button = Select
+
+#Banners
+incomplete.record.banner = Incomplete Record
+
+############################################################################################################
+#Disposition Steps                                                                                         #
+############################################################################################################
+cutoff.step = Cut off
+retain.step = Retain
+destroy.step = Destroy
+transfer.step = Transfer
+accession.step = Accession
+############################################################################################################
+#Criteria values                                                                                           #
+############################################################################################################
+all.items.criteria = All Items
+publication.date.criteria = Publication Date
+disposition.authority.criteria = Disposition Authority
+disposition.instruction.criteria = Disposition Instructions
+name.criteria = Name
+originating.organization.criteria = Originating Organization
+originator.criteria = Originator
+title.criteria = Title
+has.tag.criteria = Has tag
+has.category.criteria = Has category
+content.type.criteria = Content of type or sub-type
+has.aspect.criteria = Has aspect
+type.records.criteria = Type of records management item
+has.record.criteria = Has record type
+record.completed.criteria = Record completed
+record.filed.criteria = Record filed
+record.folder.closed.criteria = Record folder closed.
+all.record.criteria = Vital record
+has.disposition.criteria = Has disposition action
+classified.disposition.criteria = Classified by disposition schedule
+cutoff.criteria = Cutoff
+frozen.criteria = Frozen
+show.more.criteria = Show more...
