Refactor to use holds.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@66155 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-ui-tests/src/test/resources/rm_en.properties
+++ b/rm-ui-tests/src/test/resources/rm_en.properties
@@ -12,9 +12,8 @@ record.link.to.link = Link to
 record.move.to.link = Move to
 record.copy.to.link = Copy to
 record.delete.link = Delete
-#Add to hold
-record.add.to.hold.link = Freeze
-record.unfreeze.link = Unfreeze
+record.add.to.hold.link = Add to Hold
+record.remove.from.hold.link = Remove from Hold
 record.request.information.link = Request Information
 record.add.record.metadata.link = Add Record Metadata
 record.view.audit.log.link = View Audit Log
