RM-1436: Terminology - 'Frozen' should be 'On Hold'
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@67171 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-ui-tests/src/test/resources/rm_en.properties
+++ b/rm-ui-tests/src/test/resources/rm_en.properties
@@ -66,5 +66,5 @@ all.record.criteria = Vital record
 has.disposition.criteria = Has disposition action
 classified.disposition.criteria = Classified by disposition schedule
 cutoff.criteria = Cutoff
-frozen.criteria = Frozen
+frozen.criteria = On Hold
 show.more.criteria = Show more...
